--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.crazyhitty.chdev.ks.munch.ui.activities.SettingsActivity">
+    tools:context="com.ellimist.jazzmedia.ui.activities.SettingsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
