--- a/app/src/main/res/menu/menu_article.xml
+++ b/app/src/main/res/menu/menu_article.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.crazyhitty.chdev.ks.munch.ui.activities.ArticleActivity">
+    tools:context="com.ellimist.jazzmedia.ui.activities.ArticleActivity">
     <item
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_refresh_24dp"
